formver.compiler-plugin/testData/diagnostics/expensive_verification/int_array.kt
// FULL_JDK
// USE_STDLIB

import org.jetbrains.kotlin.formver.plugin.*


fun <!VIPER_TEXT!>testConstructor<!>() {
    val array = IntArray(5)

//    verify(array[0] == 0)
//    verify(
//        forall<Int> {
//            index ->
//            (0 <= index && index < 5) implies array[index] == 0
//        }
//    )


}
